# ppx_deriving_rpc2

./: Makefile  jbuild-workspace.dev  ppx_deriving_rpc2.opam
src/: jbuild
